# symbol-game

./: .gitignore  LICENSE  Makefile  README.md  filebeat.yml  pyproject.toml
docs/: project-plan.qmd
docs/diagrams/: architecture.drawio
symbol_game/: __main__.py  base.py  connection.py  game.py  gui.py  logging.py  logic_lobby.py  logic_start_game.py  logic_turns.py  messages.py  sync.py
tests/: gui_demo.py  server_client.py
