[tool.poetry]
name = "symbol-game"
version = "0.1.0"
description = "A Decentralized Multiplayer Tic-tac-toe"
authors = ["Sean Chen", "Sergei Panarin", "Axel Wester", "Runjie Fan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
